<resources>
    <string name="app_name">WhatsJeff</string>
    <string name="login_txt">Digite seu nome</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="validacao_title">Validação</string>
    <string name="validacao_text">Você recebeu um SMS para validação do seu número, digite o código de validação abaixo:</string>
    <string name="validacao_botao">Validar</string>
    <string name="validacao_codigo_txt">Digite o código</string>
    <string name="hint_login_email">Digite seu e-mail</string>
    <string name="txt_password_login">Digite sua senha</string>
    <string name="btn_login_text">Login</string>
    <string name="sign_up_txt">Não tem conta? Cadastre-se</string>


    <!-- Strings related to menu -->
    <string name="config_menu">Configurações</string>
    <string name="sair_menu">Sair</string>
    <string name="pesquisa_menu">Pesquisa</string>
    <string name="add_menu">Adicionar</string>

    <!-- Related to Fragments-->
    <string name="chat_fragment">Chats</string>
    <string name="contact_fragment">Contacts</string>

</resources>



