<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.androidcurso.jefferson.whatsjeff.activity.ConfirmSMSActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_heigth"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/validacao_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="22dp"
        android:padding="5dp"
        android:text="@string/validacao_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <EditText
        android:id="@+id/editTextConfirmSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/validacao_codigo_txt"
        android:inputType="number" />

    <Button
        android:id="@+id/btnConfirmSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextConfirmSMS"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:background="@color/colorPrimary"
        android:text="@string/validacao_botao"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />
</RelativeLayout>
